--- a/stardew/styles.css
+++ b/stardew/styles.css
@@ -608,6 +608,11 @@ to {
     }
   }
 
+@media only screen and (max-width: 490px){
+    .full{
+    animation: stack2 1.25s forwards ease-in;
+    }
+}
 
 @media only screen and (max-width: 1400px){
   .header{
