--- a/editorial-illustration/styles.css
+++ b/editorial-illustration/styles.css
@@ -108,6 +108,12 @@ body{
     color: var(--background);
 }
 
+
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
+
 .subtitle{
     font-size: 1.1vw;  
     opacity: .8;
@@ -561,6 +567,20 @@ to {
         z-index: -1000;
     }
 
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
+    }
+
     .bio, .info, .archive {
         display: block; /* Ensure these elements are stacked vertically */
         width: 100%; /* Full width */
@@ -609,6 +629,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
