--- a/stardew/styles.css
+++ b/stardew/styles.css
@@ -116,6 +116,11 @@ body{
     background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(255,0,255,1) 40%, rgba(255,0,255,1) 60%, rgba(237,237,237,1) 100%);
 }
 
+#top-header{
+  opacity: 0;
+  transition: .25s;
+}
+
 .title a{
     color: var(--background);
 }
@@ -854,6 +859,7 @@ input{
 
     .footer{
       height: 15vh;
+      background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
     }
 
     .information{
@@ -955,5 +961,17 @@ input{
     width: 90vw;
   }
 
-
+  #top-header{
+    width: 100vw;
+    height: 10vh;
+    display: block;
+    position: fixed;
+    background: rgb(78, 78, 78);
+    background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+    top:0;
+    left: 0;
+    transition: .25s;
+    pointer-events: none;
+    z-index: 1000;
+}
 }
