--- a/weaving/styles.css
+++ b/weaving/styles.css
@@ -130,6 +130,11 @@ body{
     color: var(--color);
 }
 
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
+
 .blur-and-hide {
     filter: blur(6px); /* Apply blur effect */
     opacity: 0; /* Hide the element */
@@ -680,6 +685,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
@@ -740,6 +746,21 @@ to {
 
     .full{
         margin-bottom: 2vw;
+    }
+
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        opacity: 0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
     }
 
 }
