--- a/aiga-first-things-first/styles.css
+++ b/aiga-first-things-first/styles.css
@@ -117,6 +117,12 @@ body{
     padding: 0vw;
 }
 
+
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
+
 .time{
     font-size: 1.1vw;
     margin-top:.75vw;
@@ -559,6 +565,21 @@ to {
         line-height: 1.05;
     }
 
+
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
+    }
+
     .bio, .info, .archive {
         display: block; /* Ensure these elements are stacked vertically */
         width: 100%; /* Full width */
@@ -607,6 +628,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
