--- a/archive/styles.css
+++ b/archive/styles.css
@@ -52,7 +52,7 @@ body{
     text-shadow: 0px 0px 8px rgba(237, 38, 255, 0.1);
     background-color: var(--background);
     animation: opacity .5s forwards ease-in;
-
+    scroll-behavior: smooth;
 }
 .header {
     position: fixed; /* Keep the header fixed */
@@ -89,9 +89,10 @@ body{
 }
 
 
-/* .name,.info,.archive{
-    position: fixed;
-} */
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
 
 .bio{
     width: 65%;
@@ -111,6 +112,10 @@ a{
     filter: blur(4px);
     color: var(--color);
 
+}
+
+.copy2{
+    display: none;
 }
 
 .archive > a{
@@ -163,10 +168,6 @@ a{
     border-radius: .3vw;
     display: flex; /* Add flex display */
     align-items: flex-start; /* Align items at the start */
-}
-
-.thumbnail:hover{
-    border: .5px dotted var(--color);
 }
 
 .thumbnail img {
@@ -312,40 +313,6 @@ a{
 
     .thumbnail:hover{}
     
-    .thumbnail:hover .hover {
-        opacity: 1; /* Fade in the hover element */
-    }
-
-    .thumbnail:hover .hover2 {
-        opacity: 1; /* Fade in the hover element */
-    }
-
-    .thumbnail:hover .image {
-        filter: blur(2px); /* Apply blur to the image on hover */
-    }
-
-    .thumbnail:hover .text {
-        opacity: 1; /* Reveal text inside the circle */
-    }
-
-   /* Reset styles when not hovering */
-    .thumbnail:not(:hover) .circle {
-        width: 1.8vw; /* Collapse the circle */
-        transition: width 0.25s ease-in-out; /* Ensure smooth collapsing */
-    }
-
-    .thumbnail:not(:hover) .text {
-        opacity: 0; /* Hide text */
-        transition: opacity 0.25s ease-in-out; /* Smooth transition for collapsing */
-        transition-delay: 0s; /* Reset delay */
-    }
-
-    .thumbnail:not(:hover) .hover{
-        transition-delay: .25s;
-    }
-    .thumbnail:not(:hover) .hover2{
-        transition-delay: .25s;
-    }
 
     .skill{
         font-size: .9vw;
@@ -408,6 +375,49 @@ a{
             to {
               opacity: 1;
             }
+            }
+
+            @media only screen and (min-width: 500px){
+
+                .thumbnail:hover{
+                    border: .5px dotted var(--color);
+                }
+                
+                .thumbnail:hover .hover {
+                    opacity: 1; /* Fade in the hover element */
+                }
+            
+                .thumbnail:hover .hover2 {
+                    opacity: 1; /* Fade in the hover element */
+                }
+            
+                .thumbnail:hover .image {
+                    filter: blur(2px); /* Apply blur to the image on hover */
+                }
+            
+                .thumbnail:hover .text {
+                    opacity: 1; /* Reveal text inside the circle */
+                }
+            
+               /* Reset styles when not hovering */
+                .thumbnail:not(:hover) .circle {
+                    width: 1.8vw; /* Collapse the circle */
+                    transition: width 0.25s ease-in-out; /* Ensure smooth collapsing */
+                }
+            
+                .thumbnail:not(:hover) .text {
+                    opacity: 0; /* Hide text */
+                    transition: opacity 0.25s ease-in-out; /* Smooth transition for collapsing */
+                    transition-delay: 0s; /* Reset delay */
+                }
+            
+                .thumbnail:not(:hover) .hover{
+                    transition-delay: .25s;
+                }
+                .thumbnail:not(:hover) .hover2{
+                    transition-delay: .25s;
+                }
+            
             }
                     
          
@@ -518,6 +528,10 @@ a{
                     z-index: -1000;
                 }
             
+                body{
+                    overflow: hidden;
+                }
+
                 .bio, .info, .archive {
                     display: block; /* Ensure these elements are stacked vertically */
                     width: 100%; /* Full width */
@@ -528,11 +542,18 @@ a{
                 .sub{
                     display: none;
                 }
+
                 .grid-container{
-                    margin: 50vw auto 8vw;
-                    padding: 1vw;
+                    display:block;
+                    margin: 20.5vh auto 8vw;
                     width: 90vw;
-                    background-color: var(--background);
+                    height: 73vh;
+                    /* background-color: var(--background); */
+                    padding-top:5vh;
+                    animation: stack2 1.25s forwards ease-in-out;
+                    z-index: 0;
+                    overflow: scroll;
+                    scroll-behavior: smooth;
                 }
             
                 .grid-item {
@@ -589,5 +610,30 @@ a{
                   .archive > a{
                     padding: 2.75vw 2vw 2vw 2.5vw;
                     margin-left: -2vw;
+                }
+
+                .footer{
+                    height: 10vh;
+                    background: linear-gradient(180deg, rgba(237, 237, 237, 0) 0%, rgba(237, 237, 237, .4) 30%, rgba(237, 237, 237, .8) 50%, rgba(237, 237, 237, 1) 70%, rgba(237,237,237,1) 100%);
+                  }
+
+                .phone-header{
+                    z-index: 10;
+                    width: 100vw;
+                    height: 8vh;
+                    display: block;
+                    position: fixed;
+                    background: none;
+                    background:  linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .1) 15%, rgba(237, 237, 237, .25) 30%, rgba(237, 237, 237, .45) 50%, rgba(237, 237, 237, .7) 65%, rgba(237, 237, 237, .95) 90%, rgba(237,237,237,1) 100%);
+                    top:20.45vh;
+                    left: 0;
+                    transition: .25s;
+                    pointer-events: none;
+                }
+
+                .copy2{
+                    display: block;
+                    margin-top: 12vh!important;
+                    padding-bottom: 5vh!important;
                 }
             }
