--- a/chamberlain-coffee/styles.css
+++ b/chamberlain-coffee/styles.css
@@ -108,6 +108,11 @@ body{
     color: var(--background);
 }
 
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
+
 .link{
     color: var(--black);
     font-style: italic;
@@ -676,6 +681,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
@@ -741,6 +747,20 @@ to {
 
     .full{
         margin-bottom: 2vw;
+    }
+
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
     }
 
 }
