--- a/home-book/styles.css
+++ b/home-book/styles.css
@@ -208,6 +208,10 @@ a{
     opacity: 1;
 }
 
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
 
 p {
     text-indent: 0; /* No indentation by default */
@@ -605,6 +609,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
@@ -654,6 +659,20 @@ to {
 
     .full{
         margin-bottom: 2vw;
+    }
+
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
     }
 
 }
