--- a/styles.css
+++ b/styles.css
@@ -543,11 +543,11 @@ to {
 
     .grid-container-phone{
         display:flex;
-        margin: 28vh auto 8vw;
+        margin: 20.5vh auto 8vw;
         width: 90vw;
-        height: 72vh;
+        height: 73vh;
         /* background-color: var(--background); */
-        margin-bottom: 45vw;
+        padding-top:5vh;
         animation: stack2 1.25s forwards ease-in-out;
         z-index: 0;
         overflow: scroll;
@@ -599,20 +599,26 @@ to {
 
       .footer{
         height: 10vh;
+        background: linear-gradient(180deg, rgba(237, 237, 237, 0) 0%, rgba(237, 237, 237, .4) 30%, rgba(237, 237, 237, .8) 50%, rgba(237, 237, 237, 1) 70%, rgba(237,237,237,1) 100%);
       }
 
       .phone-header{
         z-index: 1;
         width: 100vw;
-        height: 10vh;
+        height: 8vh;
         display: block;
         position: fixed;
-        background: rgb(78, 78, 78);
-        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 95%, rgba(237,237,237,1) 100%);
-        top:25vh;
+        background: none;
+        background:  linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .1) 15%, rgba(237, 237, 237, .25) 30%, rgba(237, 237, 237, .45) 50%, rgba(237, 237, 237, .7) 65%, rgba(237, 237, 237, .95) 90%, rgba(237,237,237,1) 100%);
+        top:20.45vh;
         left: 0;
         transition: .25s;
         pointer-events: none;
+    }
+
+    .copy2{
+        margin-top: 12vh!important;
+        padding-bottom: 5vh!important;
     }
       
     
