--- a/to-revisit/styles.css
+++ b/to-revisit/styles.css
@@ -296,6 +296,12 @@ p>a{
     .blur {
         filter: blur(4px);
       }
+
+
+#top-header{
+    opacity: 0;
+    transition: .25s;
+}
       
 .copyright{
     color: var(--black);
@@ -613,6 +619,7 @@ to {
 
       .footer{
         height: 15vh;
+        background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
       }
 
       .information{
@@ -663,5 +670,20 @@ to {
     .full{
         margin-bottom: 2vw;
     }
+
+    #top-header{
+        width: 100vw;
+        height: 10vh;
+        display: block;
+        position: fixed;
+        background: rgb(78, 78, 78);
+        background: linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .8) 80%, rgba(237,237,237,1) 100%);
+        top:0;
+        left: 0;
+        transition: .25s;
+        pointer-events: none;
+        z-index: 1000;
+    }
+
 
 }
