--- a/info/styles.css
+++ b/info/styles.css
@@ -510,9 +510,9 @@ to {
         display: none;
     }
     .grid-container{
-        margin: 25vh auto 8vw;
+        margin: 22vh auto 8vw;
         width: 90vw;
-        height: 71vh;
+        height: 74vh;
         background-color: var(--background);
         overflow: scroll;
     }
@@ -633,7 +633,7 @@ to {
         position: fixed;
         background: black;
         background:  linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .5) 25%, rgba(237, 237, 237, .65) 50%, rgba(237, 237, 237, .75) 60%, rgba(237, 237, 237, .95) 90%, rgba(237,237,237,1) 100%);
-        top:24.75vh;
+        top:21.75vh;
         left: 0;
         transition: .25s;
         pointer-events: none;
@@ -641,7 +641,11 @@ to {
 
     .copyright{
         margin-top: 9vh!important;
-        padding-bottom: 5vh!important;
+        padding-bottom: 4vh!important;
+    }
+
+    .archive{
+        display:none;
     }
 
 }
