--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,11 @@ a{
     pointer-events: none;
     }
 
+
+.grid-container-phone{
+    display: none!important;
+}
+
     .phone-header{
         display: none;
     }
@@ -542,10 +547,10 @@ to {
     }
 
     .grid-container-phone{
-        display:flex;
-        margin: 20.5vh auto 8vw;
+        display:flex!important;
+        margin: 17.5vh auto 8vw;
         width: 90vw;
-        height: 73vh;
+        height: 76vh;
         /* background-color: var(--background); */
         padding-top:10vh;
         animation: stack2 1.25s forwards ease-in-out;
@@ -610,7 +615,7 @@ to {
         position: fixed;
         background: none;
         background:  linear-gradient(0deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .1) 15%, rgba(237, 237, 237, .25) 30%, rgba(237, 237, 237, .45) 50%, rgba(237, 237, 237, .7) 65%, rgba(237, 237, 237, .95) 90%, rgba(237,237,237,1) 100%);
-        top:20.25vh;
+        top:17.25vh;
         left: 0;
         transition: .25s;
         pointer-events: none;
@@ -633,11 +638,11 @@ to {
 @media only screen and (max-height: 800px){
     .grid-container-phone{
         display:flex;
-        margin: 25vh auto 8vw;
+        margin: 22vh auto 8vw;
     }
 
     .phone-header{
-        top:24.75vh;
+        top:21.75vh;
     }
 
     .copy2{
