--- a/info/styles.css
+++ b/info/styles.css
@@ -216,7 +216,7 @@ p:not(:first-of-type) {
 .thumbnail {
     margin: 0;
     padding: 0;
-    border: 1px dotted var(--color);
+    /* border: 1px dotted var(--color); */
     border-radius: .3vw;
     display: flex; /* Add flex display */
     align-items: flex-start; /* Align items at the start */
